public/assets/css/main.css
/* ... */
.dropotron > li a,
.dropotron > li span {
  border: 0;
  color: rgba(255, 255, 255, 0.75);
  display: block;
  padding: 0.1em 1em;
  text-decoration: none;
}

.dropotron > li:first-child {
  border-top: 0;
}

.dropotron > li.active > a,
.dropotron > li.active > span {
  color: #e44c65;
}

.dropotron.level-0 {
  font-size: 0.8em;
  margin-top: 1em;
}

.dropotron.level-0:before {
  -moz-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  background: #272833;
  content: "";
  display: block;
  height: 1em;
  position: absolute;
  right: 1.5em;
  top: -0.5em;
  width: 1em;
}

body.landing .dropotron.level-0 {
  margin-top: 0;
}

/* Header */

#page-wrapper {
  padding-top: 3.5em;
}

#header {
  background: rgba(39, 40, 51, 0.965);
  box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.25);
  cursor: default;
  height: 3.5em;
  left: 0;
  line-height: 3.5em;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;
}

#header h1 {
  height: inherit;
  left: 1.25em;
  line-height: inherit;
  margin: 0;
  position: absolute;
  top: 0;
}

#header nav {
  position: absolute;
  right: 10em;
  top: 0;
}

#header #search {
  width: 600px;
}

#header nav ul {
  margin: 0;
}

#header nav ul li {
  display: inline-block;
  margin-left: 1em;
}

#header nav ul li a,
#header nav ul li span {
  border: 0;
  color: inherit;
  display: inline-block;
  height: inherit;
  line-height: inherit;
  outline: 0;
}

#header nav ul li a.button,
#header nav ul li span.button {
  height: 2em;
  line-height: 2em;
  padding: 0 1.25em;
}

#header nav ul li a:not(.button):before,
#header nav ul li span:not(.button):before {
  margin-right: 0.5em;
}

#header nav ul li.active > a,
#header nav ul li.active > span {
  color: #e44c65;
}

#header nav ul li > ul {
  display: none;
}

body.landing #page-wrapper {
  padding-top: 0;
}

body.landing #header {
  background: transparent;
  box-shadow: none;
  position: absolute;
}

/* Banner */

#banner {
  background-attachment: fixed;
  background-color: #272833;
  background-image: url("../../images/banner.jpg");
  background-position: center center;
  background-size: cover;
  box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
  min-height: 100vh;
  position: relative;
  text-align: center;
  z-index: 21;
}

#banner:before {
  content: "";
  display: inline-block;
  height: 100vh;
  vertical-align: middle;
  width: 1%;
}

#banner:after {
  background-image: -moz-linear-gradient(
      top,
      rgba(23, 24, 32, 0.95),
      rgba(23, 24, 32, 0.95)
    ),
    url("images/overlay.png");
  background-image: -webkit-linear-gradient(
      top,
      rgba(23, 24, 32, 0.95),
      rgba(23, 24, 32, 0.95)
    ),
    url("images/overlay.png");
  background-image: -ms-linear-gradient(
      top,
      rgba(23, 24, 32, 0.95),
      rgba(23, 24, 32, 0.95)
    ),
    url("images/overlay.png");
  background-image: linear-gradient(
      top,
      rgba(23, 24, 32, 0.95),
      rgba(23, 24, 32, 0.95)
    ),
    url("images/overlay.png");
  content: "";
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

#banner .content {
  display: inline-block;
  margin-right: 1%;
  max-width: 95%;
  padding: 6em;
  position: relative;
  text-align: right;
  vertical-align: middle;
  z-index: 1;
}

#banner .content header {
  display: inline-block;
  vertical-align: middle;
}

#banner .content header h2 {
  font-size: 2.5em;
  margin: 0;
}

#banner .content header p {
  margin: 0.5em 0 0 0;
  top: 0;
}

#banner .content .image {
  border-radius: 100%;
  display: inline-block;
  height: 18em;
  margin-left: 3em;
  vertical-align: middle;
  width: 18em;
}

#banner .content .image img {
  border-radius: 100%;
  display: block;
  width: 100%;
}

body.is-touch #banner {
  background-attachment: scroll;
}

/* Footer */

#footer {
  background: #272833;
  padding: 2em 0;
  text-align: center;
  position: absolute;
  bottom: 0;
  width: 100%;
}

#footer .icons .icon.alt {
  text-decoration: none;
}

#footer .icons .icon.alt:before {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  line-height: 1;
  text-transform: none !important;
  font-family: "Font Awesome 5 Free";
  font-weight: 400;
}

#footer .icons .icon.alt:before {
  color: #272833 !important;
  text-shadow: 1px 0 0 rgba(255, 255, 255, 0.5),
    -1px 0 0 rgba(255, 255, 255, 0.5), 0 1px 0 rgba(255, 255, 255, 0.5),
    0 -1px 0 rgba(255, 255, 255, 0.5);
}

#footer .copyright {
  color: rgba(255, 255, 255, 0.5);
  font-size: 0.8em;
  line-height: 1em;
  margin: 2em 0 0 0;
  padding: 0;
  text-align: center;
}

#footer .copyright li {
  border-left: solid 1px rgba(255, 255, 255, 0.3);
  display: inline-block;
  list-style: none;
  margin-left: 1.5em;
  padding-left: 1.5em;
}

#footer .copyright li:first-child {
  border-left: 0;
  margin-left: 0;
  padding-left: 0;
}

#footer .copyright li a {
  color: inherit;
}

/* XLarge */

@media screen and (max-width: 1680px) {
  /* Basic */

  body,
  input,
  select,
  textarea {
    font-size: 13pt;
  }
}

/* Large */

@media screen and (max-width: 1280px) {
  /* Basic */

  body,
  input,
  select,
  textarea {
    font-size: 11.5pt;
  }

  /* Spotlight */

  .spotlight.top .content {
    padding: 3.825em 0 1.825em 0;
  }

  .spotlight.bottom .content {
    padding: 3.825em 0 2.95em 0;
  }

  .spotlight.left .content,
  .spotlight.right .content {
    padding: 4.5em 2.5em;
    width: 25em;
  }

  /* Wrapper */

  .wrapper {
    padding: 4.5em 0 2.5em 0;
  }

  /* Dropotron */

  .dropotron.level-0 {
    font-size: 1em;
  }

  /* Banner */

  #banner .content {
    padding: 4.5em;
  }

  /* Footer */

  #footer {
    padding: 4.5em 0;
  }
}
/* ... */

